--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cors": "^2.8.3",
     "express": "4.15.3",
+    "lodash.uniqby": "^4.7.0",
     "request": "^2.81.0",
     "socket.io": "^2.0.3",
     "uuid": "^3.1.0"
